package Singheatlh.springboot_backend.entity.enums;

public enum AppointmentStatus {
    Upcoming,    
    Missed,
    Completed,
    Ongoing,
    Cancelled,  
}
