package Singheatlh.springboot_backend.entity.enums;

public enum Role {
    P,  // PATIENT
    C,  // CLINIC_STAFF
    S   // SYSTEM_ADMINISTRATOR
}
