package Singheatlh.springboot_backend.entity.enums;

public enum ScheduleType {
    AVAILABLE,
    UNAVAILABLE
}
